feat: novo ajuste jt